--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@ html {
 
     --APPOINTA-bg: #f5f8fa;
     --White-transparent: rgba(255, 255, 255, 0.6);
-
+    --border: #f0f3fb;
 
     ---testing-hover: #e4fff3;
     --testing: #eff4ff;
@@ -92,6 +92,12 @@ body {
 .BGseer0 {
     background-image: url("./seer/bg0.svg");
     background-position: center;
+    background-repeat: no-repeat;
+}
+
+.BGappointa {
+    background-image: url(./appointa/backgroundArrow.svg);
+    background-position: left;
     background-repeat: no-repeat;
 }
 
@@ -1190,6 +1196,7 @@ button.passwordArr {
     body h1 {
         font-size: 1.6em;
     }
+
     body .heightXS {
         height: auto;
     }
@@ -2209,13 +2216,13 @@ polygon {
 .cardBG {
     background: rgba(255, 255, 255, 0.5);
     border-radius: 35px;
-    border: 1px solid #f0f3fb;
+    border: 1px solid var(--border);
 }
 
 .cardAPPOINTA {
     background: var(--white);
     border-radius: 2.2em;
-    border: 1px solid #f0f3fb;
+    border: 1px solid var(--border);
 }
 
 .cardBorder {
@@ -3035,6 +3042,7 @@ polygon {
 .heightXS {
     height: 6rem;
 }
+
 .heightS {
     height: 14rem;
 }
