--- a/main.css
+++ b/main.css
@@ -1029,7 +1029,7 @@ button.passwordArr {
     }
 
     #bottom-arrow {
-        height: 128px;
+        height: 1rem;
     }
 
     body .AboutProjectNav {
