--- a/main.css
+++ b/main.css
@@ -362,7 +362,8 @@ section {
     margin: 0.8em 0;
 }
 .specialTextXS {
-    font-family: inherit;
+    font-family: 'Indie Flower', cursive;
+    
     font-weight: 400;
     font-size: 2.6em;
 
