--- a/main.css
+++ b/main.css
@@ -378,9 +378,9 @@ section {
     margin: 0.2em 0;
 }
 .specialTextHR {
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Jua', sans-serif;
     
-    font-weight: 400;
+    font-weight: 100;
     font-size: 2.6em;
 
     margin: 0.8em 0;
