--- a/main.css
+++ b/main.css
@@ -1,7 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
-
-
-
 html {
     scroll-behavior: smooth;
     height: 100%;
@@ -385,7 +381,7 @@ section {
 }
 
 .specialTextHR {
-    font-family: 'Jua', sans-serif;
+    font-family: 'Indie Flower', sans-serif;
 
     font-weight: 100;
     font-size: 2.6em;
