--- a/main.css
+++ b/main.css
@@ -13,9 +13,7 @@ body {
     /* mobile viewport bug fix */
     min-height: -webkit-fill-available;
 }
-body {
-    padding-top: 40px;
-}
+
 
 :root {
     /* Color */
@@ -82,7 +80,23 @@ body {
 
     --testing-font: #b5b5c3;
 }
+.backgroundColorNav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    max-width: 1240px;
+    width: 100%;
+    height: 5em;
+    text-align: center;
+    align-items: center;
+    transition: ease 0.4s;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 
+}
 .header {
     position: fixed;
     top: 0;
@@ -93,16 +107,11 @@ body {
     /*  10% opaque green */
     height: 5em;transition: transform 0.25s ease-in-out;
     border-bottom: 1px solid var(--grey-lightest);
-    z-index: 3;    
-    max-width: 1240px;
-    width: 100%;
-    text-align: center;
-    align-items: center;
-    transition: ease 0.4s;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    z-index: 3;
 }
+
+ 
+
     /*    .main{
     background-color: rgba(0,0,0,0.1);
     height: 150vh;
@@ -170,7 +179,6 @@ body {
     -ms-flex-align: center;
     -ms-flex-pack: distribute;
     justify-content: space-around;
-    background-color: ffffff;
 }
 
 a.nav-link {
