--- a/main.css
+++ b/main.css
@@ -1308,7 +1308,7 @@ button.passwordArr {
     }
 
     .t-hello {
-        font-family: 'Titillium Web', sans-serif;
+        font-family:  'Hi Melody','Titillium Web', sans-serif;
         font-weight: 400;
         font-size: 33px;
     }
@@ -1356,11 +1356,6 @@ button.passwordArr {
         /*  10% opaque green */
 
     }
-
-    body .nav-menu {
-        top: 0;
-    }
-
     .active .bar:nth-child(2) {
         opacity: 0;
     }
@@ -1380,7 +1375,9 @@ button.passwordArr {
     /*  1 - 1080 */
 
     .nav-menu {
+        background-color: var(--white);
         width: 100%;
+        height: 100%;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -1390,10 +1387,10 @@ button.passwordArr {
         flex-direction: column;
         -webkit-box-pack: justify;
         -ms-flex-pack: justify;
-        justify-content: center;
+        justify-content:flex-start;
         align-items: left;
         position: fixed;
-        top: 0;
+        top: 81px;
         right: -112%;
         -webkit-transition: 0.5s;
         transition: 0.5s;
@@ -2216,7 +2213,6 @@ input:checked~label.SEER {
     }
 
     body .nav-menu {
-        top: 0;
     }
 
     body .input-field {
@@ -2709,7 +2705,7 @@ polygon {
 }
 
 .t-hello {
-    font-family: 'Maven Pro', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
     font-weight: 400;
     font-size: 1.5em;
 }
